<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eventarrangement_bg"
    tools:context=".HomeActivityFragment" >

    <include
        android:id="@+id/rl_title"
        layout="@layout/activity_top" />

    <Spinner
        android:id="@+id/spinner_community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:layout_marginTop="@dimen/height_5_80"
        android:layout_marginBottom="@dimen/height_5_80"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_editbox"
        android:gravity="center"
        android:text="@string/str_default"
        android:textColor="@color/textColor" />

    <ScrollView
        android:id="@+id/scrollView_tablayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/spinner_community"
        android:fadeScrollbars="false" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/tableLayout_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:stretchColumns="*" >

               <TableRow
                    android:id="@+id/tableRow_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:paddingBottom="@dimen/height_6_80"
                    android:paddingTop="@dimen/height_6_80" >

                    <TextView
                        android:id="@+id/textView_sqranking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_rankinglabel"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/Two_word" />
					
                    <TextView
                        android:id="@+id/textView_sqyhname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_yh"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/Two_word" />
                    <TextView
                        android:id="@+id/textView_sqIntegral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_integrallabel"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/Two_word" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/label_myranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tableLayout_main"
                android:layout_marginLeft="@dimen/width_30_80"
                android:layout_marginTop="@dimen/height_10_80"
                android:text="@string/str_myrankinglabel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/Two_word" />

            <TextView
                android:id="@+id/textView_myranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tableLayout_main"
                android:layout_marginTop="@dimen/height_10_80"
                android:layout_toRightOf="@id/label_myranking"
                android:text="@string/str_default"
                android:textColor="@color/textColor"
                android:textSize="@dimen/Two_word" />

            <TextView
                android:id="@+id/label_myintegral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/label_myranking"
                android:layout_below="@id/label_myranking"
                android:layout_marginTop="@dimen/height_10_80"
                android:text="@string/str_myintegrallabel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/Two_word" />

            <TextView
                android:id="@+id/textView_myintegral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_myranking"
                android:layout_marginTop="@dimen/height_10_80"
                android:layout_toRightOf="@id/label_myintegral"
                android:text="@string/str_default"
                android:textColor="@color/textColor"
                android:textSize="@dimen/Two_word" />

            <TextView
                android:id="@+id/label_myputquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/label_myintegral"
                android:layout_below="@id/label_myintegral"
                android:layout_marginTop="@dimen/height_10_80"
                android:text="@string/str_myputquantitylabel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/Two_word" />

            <TextView
                android:id="@+id/textView_myputquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_myintegral"
                android:layout_marginTop="@dimen/height_10_80"
                android:layout_toRightOf="@id/label_myputquantity"
                android:text="@string/str_default"
                android:textColor="@color/textColor"
                android:textSize="@dimen/Two_word" />
            <!-- 进度条和重试按钮,可复用 -->
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/height_140_80"
        android:visibility="visible" />
    <!-- 要编辑时设为可见 -->

    <Button
        android:id="@+id/button_retry"
        android:layout_width="@dimen/width_80_80"
        android:layout_height="@dimen/height_40_80"
        android:layout_below="@id/rl_title"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/height_140_80"
        android:background="@drawable/button1seletor"
        android:text="@string/str_retrylabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/four_word"
        android:visibility="visible" />
    <!-- 要编辑时设为可见 -->

    <TextView
        android:id="@+id/textView_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/str_default"
        android:textColor="@color/textColor"
        android:textSize="@dimen/Two_word"
        android:visibility="gone" />

</RelativeLayout>